# archigram.ai

./: .env.example  .gitignore  .prettierignore  .vercelignore  ARCHITECTURE.md  App.tsx  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  GOVERNANCE.md  IMPROVEMENTS.md  MARKETING.md  PRE_LAUNCH_ASSETS.md  PRODUCT_HUNT_LAUNCH.md  PRODUCT_VISION.md  README.md  bun.lockb  cliff.toml  constants.ts  db_schema.sql  docker-compose.yml  eslint.config.js  index.html  index.tsx  intruction.md  llm.txt  metadata.json  middleware.ts  next.config.ts  nginx.conf  package.json  supabase-migrations.sql  tsconfig.json  types.ts  vercel.json  vite-env.d.ts  vite.config.ts  (+1 more)
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.husky/: pre-commit
api/: share-diagram.ts
app/: globals.css  layout.tsx  page.tsx
cli/: index.ts
components/: AIChat.tsx  AuditModal.tsx  AuthModal.tsx  BPMNStudio.tsx  CodeEditor.tsx  (+30 more)
rag/: .dockerignore  Dockerfile  config.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
rag/chunking/: __init__.py  docling_chunker.py  splitter.py  strategies.py
rag/embeddings/: __init__.py  base.py  cloud.py  local.py
rag/ingest/: __init__.py  docling_parser.py  parser.py  routes.py  validation.py
rag/middleware/: __init__.py  logging.py  request_id.py
rag/scripts/: backup_qdrant.sh
rag/search/: __init__.py  routes.py  store.py
rag/tests/: __init__.py  conftest.py  test_chunking.py  test_docling_integration.py  test_embeddings.py  test_ingest.py  test_search.py
(+110 files in other folders)
